--- a/index.html
+++ b/index.html
@@ -9,27 +9,36 @@
     <title>BEM Notation & OOCSS: Writing scaleable CSS</title>
 </head>
 
-<body>
-    <h1>BEM Wars</h1>
-    <div class="container">
-        <div>
-            <h2>The Dark Side</h2>
-            <img src="./images/vader.jpeg">
-            <p>Nesting!</p>
-            <p>Conflict!</p>
-            <p>Specificity Wars!</p>
-            <p>Cookies</p>
-        </div>
+<body class="star-wars-page-theme">
+    <header>
+        <h1>BEM Wars</h1>
+    </header>
 
-        <div>
-            <h2>The Force</h2>
-            <img src="./images/yoda.jpeg">
-            <p>Love</p>
-            <p>Beauty</p>
-            <p>CSS that Scales!</p>
-            <p>Great warrior. Wars not make one great!</p>
+    <main>
+        <div class="container">
+            <div class="card card--dark">
+                <h2 class="card__title">The Dark Side</h2>
+                <img class="card__image card__image--dark" src="./images/vader.jpeg">
+                <ul>
+                    <li>Nesting!</li>
+                    <li>Conflict!</li>
+                    <li>Specificity Wars!</li>
+                    <li>Cookies</li>
+                </ul>
+            </div>
+
+            <div class="card card--light">
+                <h2 class="card__title">The Force</h2>
+                <img class="card__image card__image--light"src="./images/yoda.jpeg">
+                <ul>
+                    <li>Love</li>
+                    <li>Beauty</li>
+                    <li>CSS that Scales!</li>
+                    <li>Great warrior. Wars not make one great!</li>
+                </ul>
+            </div>
         </div>
-    </div>
+    </main>
 </body>
 
 </html>
