--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="sw-page-theme">
 
 <head>
     <meta charset="UTF-8">
@@ -9,9 +9,9 @@
     <title>BEM Notation & OOCSS: Writing scaleable CSS</title>
 </head>
 
-<body class="star-wars-page-theme">
+<body>
     <header>
-        <h1>BEM Wars</h1>
+        <h1 class="sw-title">BEM Wars</h1>
     </header>
 
     <main>
@@ -19,7 +19,7 @@
             <div class="card card--dark">
                 <h2 class="card__title">The Dark Side</h2>
                 <img class="card__image card__image--dark" src="./images/vader.jpeg">
-                <ul>
+                <ul class="card__list">
                     <li>Nesting!</li>
                     <li>Conflict!</li>
                     <li>Specificity Wars!</li>
@@ -30,7 +30,7 @@
             <div class="card card--light">
                 <h2 class="card__title">The Force</h2>
                 <img class="card__image card__image--light"src="./images/yoda.jpeg">
-                <ul>
+                <ul class="card__list">
                     <li>Love</li>
                     <li>Beauty</li>
                     <li>CSS that Scales!</li>
