start of extension

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <main>
-        <div class="container">
+        <div class="h-cards">
             <div class="card card--dark">
                 <h2 class="card__title">The Dark Side</h2>
                 <img class="card__image card__image--dark" src="./images/vader.jpeg">
@@ -25,6 +25,7 @@
                     <li>Specificity Wars!</li>
                     <li>Cookies</li>
                 </ul>
+                <button class="sw-button sw-button--dark">Join the Dark Side</button>
             </div>
 
             <div class="card card--light">
@@ -36,8 +37,39 @@
                     <li>CSS that Scales!</li>
                     <li>Great warrior. Wars not make one great!</li>
                 </ul>
+                <button class="sw-button sw-button--light">Use the Force</button>
             </div>
         </div>
+        <h2 class="sw-title">The Cast</h2>
+        <div class="h-cards">
+            <div class="card card--dark">
+                <h2 class="card__title">Darth Vader</h2>
+                <h3 class ="card_subtitle">"Noooooooooooo....."</h3>
+                <img class="card__image card__image--dark" src="./images/vader.jpeg">
+                <ul class="card__list">
+                    <li>+ Robotics</li>
+                    <li>+ Death Stars</li>
+                    <li>- Jedi</li>
+                    <li>- Sand</li>
+                </ul>
+                <button class="sw-button sw-button--dark">Follow on Insta</button>
+            </div>
+
+            <div class="card card--light">
+                <h2 class="card__title">Yoda</h2>
+                <h3 class ="card_subtitle">"With this one, the force is strong"</h3>
+                <img class="card__image card__image--light" src="./images/yoda.jpeg">
+                <ul class="card__list">
+                    <li>+ Sticks</li>
+                    <li>+ Swamps</li>
+                    <li>- Age</li>
+                    <li>- R2D2</li>
+                </ul>
+                <button class="sw-button sw-button--light">Follow on Insta</button>
+            </div>
+        </div>
+
+        
     </main>
 </body>
 
