2nd half of extension

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="h-cards">
             <div class="card card--dark">
                 <h2 class="card__title">Darth Vader</h2>
-                <h3 class ="card_subtitle">"Noooooooooooo....."</h3>
+                <h3 class ="card__subtitle">"Noooooooooooo....."</h3>
                 <img class="card__image card__image--dark" src="./images/vader.jpeg">
                 <ul class="card__list">
                     <li>+ Robotics</li>
@@ -57,13 +57,91 @@
 
             <div class="card card--light">
                 <h2 class="card__title">Yoda</h2>
-                <h3 class ="card_subtitle">"With this one, the force is strong"</h3>
+                <h3 class ="card__subtitle">"With this one, the force is strong"</h3>
                 <img class="card__image card__image--light" src="./images/yoda.jpeg">
                 <ul class="card__list">
                     <li>+ Sticks</li>
                     <li>+ Swamps</li>
                     <li>- Age</li>
                     <li>- R2D2</li>
+                </ul>
+                <button class="sw-button sw-button--light">Follow on Insta</button>
+            </div>
+
+            <div class="card card--monster">
+                <h2 class="card__title">Rancor</h2>
+                <h3 class ="card__subtitle">"rawr."</h3>
+                <img class="card__image card__image--monster" src="./images/Rancor.jpg">
+                <ul class="card__list">
+                    <li>+ Meat</li>
+                    <li>+ Bones</li>
+                    <li>- Jedis</li>
+                    <li>- Jabbas</li>
+                </ul>
+                <button class="sw-button sw-button--monster">Follow on Insta</button>
+            </div>
+
+            <div class="card card--droid">
+                <h2 class="card__title">C-3PO</h2>
+                <h3 class ="card__subtitle">"Sometimes, I just don’t understand human behaviour."</h3>
+                <img class="card__image card__image--droid" src="./images/C-3PO.jpg">
+                <ul class="card__list">
+                    <li>+ Languages</li>
+                    <li>+ Complaints</li>
+                    <li>- Wookies</li>
+                    <li>- R2D2</li>
+                </ul>
+                <button class="sw-button sw-button--droid">Follow on Insta</button>
+            </div>
+
+            <div class="card card--droid">
+                <h2 class="card__title">R2D2</h2>
+                <h3 class ="card__subtitle">"Beep Boop Beep"</h3>
+                <img class="card__image card__image--droid" src="./images/r2d2.jpg">
+                <ul class="card__list">
+                    <li>+ Hacking</li>
+                    <li>+ C3PO <3</li>
+                    <li>- Tie Fighters</li>
+                    <li>- Stairs</li>
+                </ul>
+                <button class="sw-button sw-button--droid">Follow on Insta</button>
+            </div>
+
+            <div class="card card--light">
+                <h2 class="card__title">Leia</h2>
+                <h3 class ="card__subtitle">"Aren't you a little short?"</h3>
+                <img class="card__image card__image--light" src="./images/leia.jpg">
+                <ul class="card__list">
+                    <li>+ Smart</li>
+                    <li>+ Wit</li>
+                    <li>- Alderan</li>
+                    <li>- CGI</li>
+                </ul>
+                <button class="sw-button sw-button--light">Follow on Insta</button>
+            </div>
+
+            <div class="card card--dark">
+                <h2 class="card__title">Darth Sidious</h2>
+                <h3 class ="card__subtitle">"Something, something, ...dark side!"</h3>
+                <img class="card__image card__image--dark" src="./images/Darth_Sidious.jpg">
+                <ul class="card__list">
+                    <li>+ Dark Side</li>
+                    <li>+ Dark Side</li>
+                    <li>+ Dark Side</li>
+                    <li>+ Dark Side</li>
+                </ul>
+                <button class="sw-button sw-button--dark">Follow on Insta</button>
+            </div>
+
+            <div class="card card--light">
+                <h2 class="card__title">Han Solo</h2>
+                <h3 class ="card__subtitle">"I know?"</h3>
+                <img class="card__image card__image--light" src="./images/Han_Solo.jpg">
+                <ul class="card__list">
+                    <li>+ Shoots first</li>
+                    <li>+ 12 Parsecs</li>
+                    <li>- Shoots first</li>
+                    <li>- Indebted</li>
                 </ul>
                 <button class="sw-button sw-button--light">Follow on Insta</button>
             </div>
